# icisk-orchestrator-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/icisk_orchestrator_agent/: __init__.py  langgraph.json
src/icisk_orchestrator_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/icisk_orchestrator_agent/common/: __init__.py  utils.py
src/icisk_orchestrator_agent/common/notebook_templates/: nbt_cds_forecast.py  nbt_cds_historic.py  nbt_spi_forecast.py  nbt_spi_historic.py
src/icisk_orchestrator_agent/nodes/: chatbot.py
src/icisk_orchestrator_agent/nodes/base/: __init__.py  base_agent_tool.py
src/icisk_orchestrator_agent/nodes/subgraphs/: cds_ingestor.py  code_editor.py
src/icisk_orchestrator_agent/nodes/tools/: cds_forecast_notebook_tool.py  cds_historic_notebook_tool.py  code_editor_tool.py  spi_forecast_notebook_tool.py  spi_historic_notebook_tool.py
